QE-423 Fix Slider not taking entire width on tablet

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/hero-card-slider/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/hero-card-slider/style.scss
@@ -15,12 +15,12 @@
 	&__slides {
 		gap: var(--spacing-6);
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			gap: unset;
 		}
 	}
 
-	@media screen and (min-width: grid-size(md)) {
+	@media screen and (min-width: grid-size(lg)) {
 		--hero-card-max-width: 544px;
 		--hero-card-slider-max-width: 544px;
 		--hero-card-aspect-ratio: 34 / 37;
@@ -41,7 +41,15 @@
 		&:not(#{&}:has(#{$self}__content)) {
 			--hero-card-aspect-ratio: 3 / 2;
 
-			@media screen and (min-width: grid-size(md)) {
+			.two-columns--stack-on-tablet & {
+
+				@media screen and (min-width: grid-size(md)) and (max-width: calc(grid-size(lg) - 1px)) {
+					--hero-card-aspect-ratio: 2;
+					--hero-card-max-width: 100%;
+				}
+			}
+
+			@media screen and (min-width: grid-size(lg)) {
 				--hero-card-aspect-ratio: 34 / 37;
 			}
 		}
@@ -70,7 +78,7 @@
 		justify-content: space-between;
 		inset: 0;
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			gap: var(--spacing-5);
 			inset: auto 0 0 0;
 		}
@@ -89,7 +97,7 @@
 		margin-bottom: 0;
 		margin-top: auto;
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			margin-top: 0;
 		}
 	}
@@ -128,7 +136,7 @@
 	.btn {
 		display: none;
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			display: -webkit-box;
 		}
 	}
@@ -138,14 +146,14 @@
 		gap: var(--spacing-4);
 		margin-top: var(--spacing-4);
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			margin-top: 0;
 		}
 	}
 
 	tp-slider-arrow {
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			display: none;
 			position: absolute;
 			z-index: 99;
@@ -172,6 +180,23 @@
 		justify-content: center;
 		cursor: pointer;
 
+		.section--has-background-black & {
+			background-color: var(--color-white);
+
+			@media screen and (min-width: grid-size(lg)) {
+				background-color: var(--color-black);
+			}
+
+			path {
+				fill: var(--color-black);
+
+				@media screen and (min-width: grid-size(lg)) {
+					fill: var(--color-white);
+				}
+			}
+
+		}
+
 		svg {
 			transform: scale(1.3);
 		}
@@ -190,7 +215,7 @@
 		z-index: 3;
 		display: none;
 
-		@media screen and (min-width: grid-size(md)) {
+		@media screen and (min-width: grid-size(lg)) {
 			display: flex;
 		}
 	}
